--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,18 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/",
-      "dest": "/Fit-tracker/index.html"
+      "source": "/",
+      "destination": "/Fit-tracker/index.html"
     },
     {
-      "src": "/(.*)",
-      "dest": "/Fit-tracker/$1"
+      "source": "/([^.?]+)/?$",
+      "destination": "/Fit-tracker/$1.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/Fit-tracker/$1"
     }
   ]
 }
