--- a/.vscode/vercel.json
+++ b/.vscode/vercel.json
@@ -1,14 +1,8 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "builds": [
-    {
-      "src": "Fit-tracker/**/*",
-      "use": "@vercel/static"
-    }
-  ],
   "rewrites": [
-    { "source": "/", "destination": "/Fit-tracker/index.html" },
-    { "source": "/:path*", "destination": "/Fit-tracker/:path*" }
+    {
+      "source": "/:path*",
+      "destination": "/"
+    }
   ]
 }
